--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,11 @@
-@media (max-width:701px) and (min-width:421px){
+@media (max-width:820px) and (min-width:421px){
+    /*Header*/
+    #header{
+        height: auto;
+    }
+
     /*Menu*/
     nav{
-        position: relative;
         padding-right:0px ;
     }
     .mn-mobile{
@@ -18,19 +22,38 @@
         flex-direction: column;
         align-items: flex-start;
         background-color: var(--color-dark);
-        gap: 0px;
+        gap: 0px;  
+        transition: all ease .3s;
     }
     #menu li a{
         display: block;
         width: 100dvw;
         padding: 25px 10px;
+    }
+
+    /*Hero-Area*/
+    .hero-area h1{
+        font-size: 72px;
+    }
+    .hero-area h2{
+        font-size: 38px;
+    }
+    .hero-cta{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 2px;
+    }
+    .hero-cta .cta{
+        width: 100%;
+        max-width: 280px;
+        justify-content: center;
     }
 }
 
-@media (max-width:420px){
+@media (max-width:490px){
     /*Menu*/
     nav{
-        position: relative;
         padding-right:0px ;
     }
     .mn-mobile{
@@ -48,10 +71,30 @@
         align-items: flex-start;
         background-color: var(--color-dark);
         gap: 0px;
+        transition: width ease 0.3s;
     }
     #menu li a{
         display: block;
         width: 100dvw;
         padding: 25px 10px;
+    }
+
+    /*Hero-Area*/
+    .hero-area h1{
+        font-size: 56px;
+    }
+    .hero-area h2{
+        font-size: 26px;
+    }
+    .hero-cta{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 2px;
+    }
+    .hero-cta .cta{
+        width: 100%;
+        max-width: 280px;
+        justify-content: center;
     }
 }
