--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -67,12 +67,15 @@
     }
 
     /*Projetos*/
-
     .projetos-grid-area{
         grid-template-columns: repeat(2, auto);
 
     }
 
+    /*Contato*/
+    .contato-content{
+        flex-direction: column;
+    }
 }
 
 @media (max-width:700px){
@@ -185,10 +188,11 @@
         width: 280px;
     }
     .projetos-modal{
-        padding: 80px 10px;
+        padding: 15px;
     }
     .modal-area{
         width: 100%;
+        max-height: 85%;
         background-size: cover;
         background-position:  top center;
     }
@@ -200,5 +204,28 @@
     }
     .modal-infos p{
         margin-bottom: 10px;
+    }
+
+    /*Modal*/
+    .modal-tec-grid{
+        grid-template-columns: repeat(1, 150px);
+        justify-content: center;
+    }
+    
+
+    /*Contato*/
+    .contato-content{
+        flex-direction: column;
+        padding: 20px 0px;    }
+    .social-content{
+        grid-template-columns: repeat(1, 300px);
+        justify-content: center;
+    }
+    .contato-social-item,
+    .info-item {
+        border-left: 1px solid var(--color-contrast-1);
+    }
+    .infos-content{
+        justify-content: center;
     }
 }
